# This file documents the revision history for Perl extension Catalyst.

        - Make MyApp immutable at the end of the scope after the setup
          method is called, fixing issues with plugins which have their 
          own new methods by inlining a constructor on MyApp (t0m)
          - Test for this and method modifiers in MyApp (t0m)
        - Fix Catalyst::Plugin::Authentication's authentication
          plugin backwards compatibility issues by fixing 
          Class::Data::Inheritable compatibility (t0m)
          - Test for this (t0m)
        - Fix bug causing Catalyst::Request::Upload's basename method
          to return undef (t0m)
          - Test for this (Carl Franks)
        - Fix loading of classes which do not define any symbols to not
          die, as it didn't in 5.70 (t0m)
          - Test for this (t0m)
        - Bump MooseX::Emulate::Class::Accessor::Fast dependency
          to force new version which fixes a lot of plugins (t0m)
        - Make log levels additive, and add documentation and tests
          for the setup_log method, which previously had none.
          Sewn together by t0m from two patches provided by David E. Wheeler
        - Switch an around 'new' in Catalyst::Controller to a BUILDARGS
          method as it's much neater and more obvious what is going on (t0m)
        - Add a clearer method on request and response _context 
          attributes, and use if from ::Engine rather than deleting
          the key from the instance hash (t0m)
        - Use handles on tree attribute of Catalyst::Stats to replace
          trivial delegation methods (t0m)
        - Change the following direct hash accesses into attributes:
          Catalyst::Engine: _prepared_write
          Catalyst::Engine::CGI: _header_buf
          Catalyst::Engine::HTTP: options, _keepalive, _write_error
          Catalyst::Request: _path
          Catalyst::Stats: tree
          (t0m)
        - Fix issues in Catalyst::Controller::WrapCGI 